@@ -20,6 +20,9 @@
  *
  * The comparison can be either {@link strict} or not.
  *
+ * Starting from version 1.0.8, CCompareValidator supports different comparison operators.
+ * Previously, it only compares to see if two values are equal or not.
+ *
  * @author Qiang Xue <qiang.xue@gmail.com>
  * @version $Id$
  * @package system.validators
@@ -45,6 +48,22 @@ class CCompareValidator extends CValidator
 	 * meaning that if the attribute is empty, it is considered valid.
 	 */
 	public $allowEmpty=true;
+	/**
+	 * @var string the operator for comparison. Defaults to '='.
+	 * The followings are valid operators:
+	 * <ul>
+	 * <li>'=' or '==': validates to see if the two values are equal. If {@link strict} is true, the comparison
+	 * will be done in strict mode (i.e. checking value type as well).</li>
+	 * <li>'!=': validates to see if the two values are NOT equal. If {@link strict} is true, the comparison
+	 * will be done in strict mode (i.e. checking value type as well).</li>
+	 * <li>'>': validates to see if the value being validated is greater than the value being compared with.</li>
+	 * <li>'>=': validates to see if the value being validated is greater than or equal to the value being compared with.</li>
+	 * <li>'<': validates to see if the value being validated is less than the value being compared with.</li>
+	 * <li>'<=': validates to see if the value being validated is less than or equal to the value being compared with.</li>
+	 * </ul>
+	 * @since 1.0.8
+	 */
+	public $operator='=';
 
 	/**
 	 * Validates the attribute of the object.
@@ -65,11 +84,68 @@ class CCompareValidator extends CValidator
 			$compareValue=$object->$compareAttribute;
 			$compareTo=$object->getAttributeLabel($compareAttribute);
 		}
-		if(($this->strict && $value!==$compareValue) || (!$this->strict && $value!=$compareValue))
+
+		switch($this->operator)
 		{
-			$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be repeated exactly.');
-			$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo));
+			case '=':
+			case '==':
+				if(($this->strict && $value!==$compareValue) || (!$this->strict && $value!=$compareValue))
+				{
+					$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be repeated exactly.');
+					$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo));
+				}
+				break;
+			case '!=':
+				if(($this->strict && $value===$compareValue) || (!$this->strict && $value==$compareValue))
+				{
+					$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must not be equal to "{compareValue}".');
+					$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo,'{compareValue}'=>$compareValue));
+				}
+				break;
+			case '>':
+				if($value<=$compareValue)
+				{
+					$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be greater than "{compareValue}".');
+					$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo,'{compareValue}'=>$compareValue));
+				}
+				break;
+			case '>=':
+				if($value<$compareValue)
+				{
+					$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be greater than or equal to "{compareValue}".');
+					$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo,'{compareValue}'=>$compareValue));
+				}
+				break;
+			case '<':
+				if($value>=$compareValue)
+				{
+					$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be less than "{compareValue}".');
+					$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo,'{compareValue}'=>$compareValue));
+				}
+				break;
+			case '<=':
+				if($value>$compareValue)
+				{
+					$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be less than or equal to "{compareValue}".');
+					$this->addError($object,$attribute,$message,array('{compareAttribute}'=>$compareTo,'{compareValue}'=>$compareValue));
+				}
+				break;
+			default:
+				throw new CException(Yii::t('yii','Invalid operator "{operator}".',array('{operator}'=>$this->operator)));
+		}
+	}
+
+	protected function compareValues($value,$value2)
+	{
+		switch($this->operator)
+		{
+			case '=':
+			case '==':
+				return ($this->strict && $value===$compareValue) || (!$this->strict && $value==$compareValue);
+			case '!=':
+				return ($this->strict && $value!==$compareValue) || (!$this->strict && $value!=$compareValue);
+			case '>':
+				return $value>$compareValue;
 		}
 	}
 }
-
