@@ -21,6 +21,7 @@ Version 1.0.8 To be released
 - New #425: Added defaultParams option to the rules used by CUrlManager (Qiang)
 - New #426: Added CApplication::setExtensionPath() (Qiang)
 - New #436: Added error templates in Russian (idlesign)
+- New #456: Added CCompareValidator::operator to support comparing values using different operators (Qiang)
 - New #461: Added CHtml::htmlButton() (Qiang)
 - New #467: Improved the algorithm for determining script URL by CHttpRequest (Qiang)
 - New #474: Added CActiveRecord::refreshMetaData() to allow using the latest table meta data (Qiang)
